Added Lecture 2. Added hide_code plugin.

--- a/Jupyter Notebooks/Bridge 1.ipynb
+++ b/Jupyter Notebooks/Bridge 1.ipynb
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above is a form of type conversion--the alteration of one type into another. Here’s another example with a string:"
+    "The above is a form of **type conversion**--the alteration of one type into another. Here’s another example with a string:"
    ]
   },
   {
