--- a/Jupyter Notebooks/Vocabulary Reference Sheet.ipynb
+++ b/Jupyter Notebooks/Vocabulary Reference Sheet.ipynb
@@ -69,9 +69,41 @@
     "16. **Function Body:** the “inside” of a function--the items below the *def* line of a function. Whitespace signals what is inside the function body. Furthermore, the function body is flush against the function header vertically.\n",
     "17. **Function Header:** the *def* line of the function that states a function’s name and what parameters, if any, it requires in order to be used. \n",
     "18. **Return Type:** the type of value which a function gives back to the location where the function is called at the end of its actions. Cued by the *return* keyword.\n",
-    "19. **Whitespace:** blank space--usually, tabbed space--in the program.\n",
+    "19. **Whitespace:** blank space in the program.\n",
     "    1. Python uses whitespace in order to determine what is “inside” of what. This is important for constructions such as functions (e.g. differentiating the function header from the function body) and others that we shall see as we go on.\n",
     "20. **Dot Notation:** a way of calling a function. Requires that the function be of the appropriate type in order to be called. Uses a period (i.e. the “dot”) to call the function on a given variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bridge 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **bool**: a type referring to Boolean logic--that is, a mathematics consisting solely of '1's and '0's and centering around the values True and False.\n",
+    "2. **complex**: a type composed by complex numbers. You may have also heard them called imaginary numbers. They are all of the form a + bi, where a and b are real numbers and i is the square root of -1.\n",
+    "3. **float**: a type composed by rational numbers. These numbers represent all of your decimals and fractions. A computer has to find ways to represent as much as it can. It can’t represent every decimal and fraction exactly--it would have too take up too much space for that. A notation called floating-point notation is used to represent these numbers; hence, the type has been consistently called float.\n",
+    "4. **type conversion**: the alteration of a value's type from one type to another (e.g. str(10) changing the *int* 10 into a *str* \"10\").\n",
+    "5. **natural numbers**: the set of all positive whole numbers. Computer scientists tend to include zero in this set, whereas mathematicians tend not to do so."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lecture 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. (WIP)"
    ]
   }
  ],
