Altered location of lecture files; gave minor updates to some examples in Bridge 1.

--- a/Jupyter Notebooks/Bridge 1.ipynb
+++ b/Jupyter Notebooks/Bridge 1.ipynb
@@ -418,7 +418,7 @@
     "# This doesn’t work for every character, although it should work for common characters.\n",
     "\n",
     "print(\"Results: \")\n",
-    "\"LoLz NoOb\".swapcase() # returns \"lOlZ nOoB\""
+    "\"UPPER lower\".swapcase() # returns \"upper LOWER\""
    ]
   },
   {
@@ -822,13 +822,13 @@
     "    print(\"So, that’s it, eh?\")\n",
     "    return my_input\n",
     "\n",
-    "def mock_user(input):\n",
-    "    print(input.swapcase())\n",
-    "    print(\"LOL!\")\n",
+    "def mock_user(my_input):\n",
+    "    print(my_input.swapcase())\n",
+    "    print(\"HAHA!\")\n",
     "\n",
     "def interrogate():\n",
     "    mock_user(get_user_input())\n",
-    "    print(\"Hah. Got 'em.\")\n",
+    "    print(\"Heh, gotcha.\")\n",
     "\n",
     "print(\"Results: \")\n",
     "interrogate()\n",
@@ -881,6 +881,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.0"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
