Added Lecture 3 and determined its subject matter. Altered some wording and formatting on Lecture 2 to distinguish the discussions on selection and iteration and made 'selection', 'iteration', and 'expression' bolded to reflect their status as introduced terms. An 'expression' was also clearly defined (although the exact wording may change later).

--- a/Jupyter Notebooks/Lecture 2.ipynb
+++ b/Jupyter Notebooks/Lecture 2.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus far, we’ve more heavily delved into two types: integers (int) and strings (str). Of types that are paradigmatic to programming, these types are incredibly frequent and manifest themselves in this form or in variations. However, there is yet another type which fits this category: a Boolean, known in Python as a *bool*. This type is named after a mathematician who studied the logic of mathematics with two numbers--in other words, binary mathematics. In this world, “0” and “1” are the only choices for representation. It is the same for the Boolean type; however, we more commonly represent this type as a logical one consisting of True and False. For example:"
+    "Thus far, we’ve more heavily delved into two types: integers (int) and strings (str). Of types that are paradigmatic to programming, these types are incredibly frequent and manifest themselves in this form or in variations. However, there is yet another type which fits this category: a **Boolean**, known in Python as a *bool*. This type is named after a mathematician who studied the logic of mathematics with two numbers--in other words, binary mathematics. In this world, “0” and “1” are the only choices for representation. It is the same for the Boolean type; however, we more commonly represent this type as a logical one consisting of True and False. For example:"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In programming languages, selection refers to the concept of *choice*--actions are chosen based upon certain conditions. There are various manifestations of this choice syntactically, but they generally take the same form. This involves two general stages. The first *checks whether an action should be performed* or *which action should be performed*; the second *performs the action*. Python’s version of selection takes exactly one format, making it easy to use and to get used to. In full, this format can be displayed as follows:"
+    "In programming languages, **selection** refers to the concept of *choice*--actions are chosen based upon certain conditions. There are various manifestations of this choice syntactically, but they generally take the same form. This involves two general stages. The first *checks whether an action should be performed* or *which action should be performed*; the second *performs the action*. Python’s version of selection takes exactly one format, making it easy to use and to get used to. In full, this format can be displayed as follows:"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we set up two variables that are used in the selection statements. They are both initially true. When this code runs, the first two variables are assigned the Boolean true. Then, the condition hits. We hit the *if* statement, which evaluates first. Because my_first_condition is true, we go inside the *if* statement. We perform the action(s) inside the *if* statement; that is, “First option!” is printed. After that, the other statements in the selection are ignored. We do not check *elif* or *else*; they no longer matter to the program because if was evaluated. In other words, selection chooses one option and one option only in this case. For Python, in fact, this is always true--there is not an explicit form of multiple selection, where you could choose multiple options depending on the circumstances. Other languages do have this, but Python has chosen not to implement it because it can be done in other ways.\n",
+    "Here, we set up two variables that are used in the selection statements. They are both initially true. When this code runs, the first two variables are assigned the Boolean true. Then, the condition hits. We hit the *if* statement, which evaluates first. To determine whether the program will perform the actions in this condition, the **expression**--one or many values and accompanying operations--must be evaluated. Because my_first_condition determined to be true, we go inside the *if* statement. We perform the action(s) inside the *if* statement; that is, “First option!” is printed. After that, the other statements in the selection are ignored. We do not check *elif* or *else*; they no longer matter to the program because if was evaluated. In other words, selection chooses one option and one option only in this case. For Python, in fact, this is always true--there is not an explicit form of multiple selection, where you could choose multiple options depending on the circumstances. Other languages do have this, but Python has chosen not to implement it because it can be done in other ways.\n",
     "\n",
     "Given what we just discussed, what do you think will happen if we run the code above with a slight change?"
    ]
@@ -574,8 +574,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "… but this code is unnecessarily long and repetitive; furthermore, it only works for one two iterations. whenTen(9) would now work as intended, but whenTen(17) would still fail. We don’t want to keep repeating the same code over and over and over; thus, we use iteration instead. The most basic--and most controlled--form of iteration is the *while* loop. Syntactically, it is as follows:"
+    "… but this code is unnecessarily long and repetitive; furthermore, it only works for one two iterations. whenTen(9) would now work as intended, but whenTen(17) would still fail. We don’t want to keep repeating the same code over and over and over; thus, we use the technique of **iteration** instead. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Iteration: An Introduction"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The most basic--and most controlled--form of iteration known as the *while* loop. This variant of iteration is commonly used in a variety of programming languages. Syntactically, it is as follows:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -593,7 +617,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seems pretty simple, right? Certainly, it can be--however, just like any programming construct, it could be made into something complex depending on how it is used. Let’s fix the above code with the while loop to show it in action."
+    "Seems pretty simple, right? Certainly, it can be--however, as with any programming construct, it could be made more complex depending on how it is used. Let’s fix the above code with the while loop to show it in action."
    ]
   },
   {
@@ -651,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A *while* loop works simply. When the code, in its process, hits the *while* statement, it evaluates the *condition* given in parentheses. When the number is not equal to 10, the program performs the actions inside the loop. It repeatedly checks the selection over and over, adding or subtracting when relevant, until number equals 10. Once this is the case and the program returns to the *while* statement to evaluate the condition, the loop ends and actions after the loop are performed. In other words, as it uses the loop, the program will eventually set number to 10. However, it will not end right when that happens. Rather, the print statement at the bottom of the loop will be triggered. Then, the loop will return to the top and checks whether a new iteration should be started. Since 10 *is* equal to 10, the condition is false and the loop concludes. Then, the actions outside the loop are performed--that is, in this case, the final print statement."
+    "A *while* loop works as follows. When the code, in its process, hits the *while* statement, it evaluates the *condition* given in parentheses. When the number is not equal to 10, the program performs the actions inside the loop. It repeatedly checks the selection over and over, adding or subtracting when relevant, until number equals 10. Once this is the case and the program returns to the *while* statement to evaluate the condition, the loop ends and actions after the loop are performed. In other words, as it uses the loop, the program will eventually set number to 10. However, it will not end right when that happens. Rather, the print statement at the bottom of the loop will be triggered. Then, the loop will return to the top and checks whether a new iteration should be started. Since 10 *is* equal to 10, the condition is false and the loop concludes. Then, the actions outside the loop are performed--that is, in this case, the final print statement."
    ]
   },
   {
@@ -1088,6 +1112,15 @@
     },
     "version_major": 2,
     "version_minor": 0
+   }
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
    }
   }
  },
